// Copyright 2018 The Swarming Authors. All rights reserved.
// Use of this source code is governed by the Apache v2.0 license that can be
// found in the LICENSE file.

syntax = "proto3";

package internal.testing;

option go_package = "go.chromium.org/luci/common/proto/internal/testingpb;testingpb";

import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";

message Some {
  int64 i = 1;
}

message Simple {
  int64 id = 1;
  Some some = 2;
  Some other_some = 3;
  Some other_some_json = 4 [json_name="customJSON"];
  google.protobuf.FieldMask fields = 100;
  google.protobuf.FieldMask other_fields = 101;
}

message Props {
  google.protobuf.Struct properties = 6;
  google.protobuf.FieldMask fields = 100;
}

message WithInner {
  message Inner {
    oneof msg {
      Simple simple = 1;
      Props props = 2;
    }
  }
  repeated Inner msgs = 1;
}

message Full {
  int32 i32 = 1;
  int64 i64 = 2;
  uint32 u32 = 3;
  uint64 u64 = 4;
  float f32 = 5;
  double f64 = 6;
  bool boolean = 7;
  int32 num = 8;
  repeated int32 nums = 9;
  string str = 10;
  repeated string strs = 11;
  Full msg = 12;
  repeated Full msgs = 13;
  map<string, int32> map_str_num = 14;
  map<int32, string> map_num_str = 15;
  map<bool, string> map_bool_str = 16;
  map<string, Full> map_str_msg = 17;
  string json_name = 18;
  string json_name_option = 19 [json_name = "another_json_name"];
}
